tests/suite/pass/generated/lexer/pass_bool_true.ny
fn main() {
    let x = true
    print(0)
}
