tests/suite/fail/generated/stderr_full/stderr_undefined.ny
fn main() {
    let x = not_a_symbol
}
